# opengl_practice

./: CMakeLists.txt  main.cpp  shader.h
Shaders/: shader.fragment  shader.vertex
